# 42-Porto-Piscine

./: .gitignore  .gitmodules  README.md  SetAllFilesToLFAndUTF8NoBOM.ph1  prepareexcercisefolder.bat
BSQ/: BSQSolverMain.c
BSQ/includes/: fileparser.h  mapdata.h  point.h
BSQ/src/: FileParser.c  MapPrinter.c
C 00/ex00/: ft_putchar.c
C 00/ex01/: ft_print_alphabet.c
C 00/ex02/: test_ex02.c
C 00/ex04/: ft_is_negative.c  test_ex04.c
C 00/ex05/: ft_print_comb.c
C 00/ex06/: ft_print_comb2.c
C 00/ex08/: ft_print_combn.c  test_ex08.c
C 01/ex00/: test_ex00.c
C 01/ex01/: ft_ultimate_ft.c  test_ex01.c
C 01/ex02/: ft_swap.c
C 01/ex04/: test_ex04.c
C 01/ex06/: ft_strlen.c  test_ex06.c
C 01/ex08/: ft_sort_int_tab.c  test_ex08.c
C 02/ex00/: test_ex00.c
C 02/ex02/: ft_str_is_alpha.c
C 02/ex03/: ft_str_is_numeric.c  test_ex03.c
C 02/ex04/: ft_str_is_lowercase.c
C 02/ex05/: ft_str_is_uppercase.c
C 02/ex06/: ft_str_is_printable.c  test_ex06.c
C 02/ex07/: test_ex07.c
C 02/ex08/: ft_strlowcase.c
C 02/ex09/: ft_strcapitalize.c
C 02/ex10/: test_ex10.c
C 02/ex11/: test_ex11.c
C 03/ex00/: test_ex00.c
C 03/ex01/: ft_strncmp.c
C 03/ex02/: ft_strcat.c  test_ex02.c
C 03/ex03/: ft_strncat.c
C 03/ex04/: test_ex04.c
C 03/ex05/: ft_strlcat.c
C_00/: CMakeLists.txt  RunNorminetteOnAll.c
C_00/ex00/: ft_putchar.c  test_ex00.c
C_00/ex01/: ft_print_alphabet.c  test_ex01.c
C_00/ex02/: ft_print_reverse_alphabet.c
C_00/ex03/: ft_print_numbers.c  test_ex03.c
C_00/ex04/: ft_is_negative.c
C_00/ex05/: ft_print_comb.c  test_ex05.c
C_00/ex06/: ft_print_comb2.c  test_ex06.c
C_00/ex07/: ft_putnbr.c  test_ex07.c
C_00/ex08/: ft_print_combn.c
C_01/: CMakeLists.txt
C_01/ex00/: ft_ft.c
C_01/ex02/: test_ex02.c
C_01/ex03/: ft_div_mod.c  test_ex03.c
C_01/ex04/: ft_ultimate_div_mod.c
C_01/ex05/: ft_putstr.c  test_ex05.c
C_01/ex07/: ft_rev_int_tab.c  test_ex07.c
C_02/: CMakeLists.txt
C_02/ex00/: ft_strcpy.c
C_02/ex01/: ft_strncpy.c  test_ex01.c
C_02/ex02/: test_ex02.c
C_02/ex04/: test_ex04.c
C_02/ex05/: test_ex05.c
C_02/ex07/: ft_strupcase.c
C_02/ex08/: test_ex08.c
C_02/ex09/: test_ex09.c
C_02/ex10/: ft_strlcpy.c
C_02/ex11/: ft_putstr_non_printable.c
C_02/ex12/: ft_print_memory.c  test_ex12.c
C_03/: CMakeLists.txt
C_03/ex00/: ft_strcmp.c
C_03/ex01/: test_ex01.c
C_03/ex03/: test_ex03.c
C_03/ex04/: ft_strstr.c
C_03/ex05/: test_ex05.c
C_04/: CMakeLists.txt  SetAllFilesToLFAndUTF8NoBOM.ps1
C_04/ex00/: ft_strlen.c  test_ex00.c
C_04/ex01/: ft_putstr.c  test_ex01.c
C_04/ex02/: ft_putnbr.c  test_ex02.c
C_04/ex03/: ft_atoi.c  test_ex03.c
C_04/ex04/: ft_putnbr_base.c  test_ex04.c
C_04/ex05/: ft_atoi_base.c  test_ex05.c
C_05/: CMakeLists.txt
C_05/ex00/: ft_iterative_factorial.c  test_ex00.c
C_05/ex01/: ft_recursive_factorial.c  test_ex01.c
C_05/ex02/: ft_iterative_power.c  test_ex02.c
C_05/ex03/: ft_recursive_power.c  test_ex03.c
C_05/ex04/: ft_fibonacci.c  test_ex04.c
C_05/ex05/: ft_sqrt.c  test_ex05.c
C_05/ex06/: ft_is_prime.c  test_ex06.c
C_05/ex07/: ft_find_next_prime.c  test_ex07.c
C_05/ex08/: ft_ten_queens_puzzle.c  test_ex08.c
C_06/: CMakeLists.txt
C_06/ex00/: ft_print_program_name.c
C_06/ex01/: ft_print_params.c
C_06/ex02/: ft_rev_params.c
C_06/ex03/: ft_sort_params.c
C_07/: CMakeLists.txt
C_07/ex00/: ft_strdup.c  test_ex00.c
C_07/ex01/: ft_range.c  test_ex01.c
C_07/ex02/: ft_ultimate_range.c  test_ex02.c
C_07/ex03/: ft_strjoin.c  test_ex03.c
C_07/ex04/: ft_convert_base.c  ft_convert_base2.c  test_ex04.c
C_08/: CMakeLists.txt
C_09/: CMakeLists.txt
C_10/: CMakeLists.txt  main.cpp
C_11/: CMakeLists.txt  main.c
C_12/: CMakeLists.txt
C_13/: CMakeLists.txt
Rush00/: ft_putchar.c  rush02.c
Rush01/: gridhelpers.c  main.c  puzzle.h  solver.c  solvervalidationrowhelpers.c  utils.c
RushBSQ/: CMakeLists.txt  Result.h
RushDoubleWHile/: RushDoubleWHile.sln
Rush_00/: CMakeLists.txt
Rush_00/ex00/: main.c  rush01.c
Rush_01/: CMakeLists.txt  solvervalidation.c  solvervalidationcolumnhelpers.c  solvervisibility.c
Rush_02/: CMakeLists.txt
Rush_03/: BSQSolverMain.c  CMakeLists.txt
Rush_03/ProblemFiles/: ParsingReadme
Rush_03/includes/: point.h
Rush_03/src/: BSQSolver.c  FileParser.c
Rush_03/src/MapGenerator/: ProgramParameters.h
Rush_03/src/ParameterParser/: ParameterParser.c
(+58 files in other folders)
